RESOLVED FIXED78235
Web Inspector: fix setOuterHTML for the case that adds / removes duplicate.
https://bugs.webkit.org/show_bug.cgi?id=78235
Summary Web Inspector: fix setOuterHTML for the case that adds / removes duplicate.
Pavel Feldman
Reported 2012-02-09 07:07:29 PST
Today, editing <h2></h2> -> <h2></h2><h2></h2> results in a noop.
Attachments
Patch (17.67 KB, patch)
2012-02-09 07:10 PST, Pavel Feldman
yurys: review+
Pavel Feldman
Comment 1 2012-02-09 07:10:21 PST
Pavel Feldman
Comment 2 2012-02-09 07:27:19 PST
Note You need to log in before you can comment on or make changes to this bug.