Web Inspector: fix setOuterHTML for the case that adds / removes duplicate. https://bugs.webkit.org/show_bug.cgi?id=78235

Reviewed by Yury Semikhatsky.

Source/WebCore:

* inspector/DOMEditor.cpp:
(WebCore::DOMEditor::diff):
(WebCore::DOMEditor::innerPatchChildren):
(WebCore):
(WebCore::nodeName):
(WebCore::DOMEditor::dumpMap):
* inspector/DOMEditor.h:
(DOMEditor):

LayoutTests:

* inspector/elements/set-outer-html-2-expected.txt:
* inspector/elements/set-outer-html-2.html:
* inspector/elements/set-outer-html-expected.txt:
* inspector/elements/set-outer-html.html:

Canonical link: https://commits.webkit.org/95147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107242 268f45cc-cd09-0410-ab3c-d52691b4dbfc